--- a/twitter.html
+++ b/twitter.html
@@ -12,10 +12,10 @@
 
                 </header>
                 <div class="content">
-
+                    <img class = "profile"src = "Twitter_Logo_Blue.png">
                 </div>
                 <footer>
-                    
+
                 </footer>
             </article>
         </main>
