--- a/twitter.html
+++ b/twitter.html
@@ -4,16 +4,22 @@
         <meta charset="utf-8">
         <title>Fake Twitter</title>
         <link rel="stylesheet" href="birdstyles.css">
+
     </head>
     <body>
         <main id="feed">
             <article class="tweet">
                 <header>
+                      <div class="content">
+                          <img class = "profile"src = "Twitter_Logo_Blue.png">
+                      </div>
+                  <div class=""
 
+                  </div>
                 </header>
-                <div class="content">
-                    <img class = "profile"src = "Twitter_Logo_Blue.png">
-                </div>
+
+
+               <h1>
                 <footer>
 
                 </footer>
